# mara

./: .gitignore  .gitmodules  CMakeLists.txt  compile-shaders-emscripten.bat  compile-shaders-win-pause.bat  compile-shaders-win.bat  configure-emscripten.bat  configure-emscripten.sh  configure-gmake-2.bat  configure-vs-22.bat  configure-xcode-4.bat  configure-xcode.sh  generate-vs-22.bat  generate-xcode.sh  premake5.lua  renderdocsettings.cap  run-clang-format.bat
application/: main.cpp
application/src/imgui-sdl/: imgui_impl_sdl.cpp
examples/asset-manager/: CMakeLists.txt
examples/asset-manager/assets/shaders/: settings.ini
examples/asset-manager/src/: main.cpp
examples/asset-manager/tools/: shader-compile-glsl.bat
examples/example-01/: CMakeLists.txt  compile-shaders-ios.sh  compile-shaders-win.bat
examples/example-01/include/: example01.hpp
examples/example-01/include/render-systems/deferred/: deferred.hpp
examples/example-01/include/render-systems/empty/: empty.hpp
examples/example-01/include/render-systems/post-processing/: post_processing.hpp
examples/example-01/include/renderers/deferred/: deferred.hpp
examples/example-01/shaders/src/: mrender-light.sh
examples/example-01/shaders/src/debug_draw/: debug_draw-frag.sc  debug_draw-vert.sc
examples/example-01/shaders/src/deferred_combine/: deferred_combine-frag.sc
examples/example-01/shaders/src/deferred_geo/: deferred_geo-frag.sc  deferred_geo-vert.sc  varying.def.sc
examples/example-01/shaders/src/deferred_light_directional/: deferred_light_directional-frag.sc  deferred_light_directional-vert.sc
examples/example-01/shaders/src/deferred_light_point/: deferred_light_point-frag.sc
examples/example-01/shaders/src/deferred_light_spot/: deferred_light_spot-frag.sc
examples/example-01/shaders/src/screen/: screen-frag.sc
examples/example-01/shaders/src/shadow/: shadow-frag.sc  shadow-vert.sc
examples/example-01/src/: example01.cpp  main.cpp
examples/example-01/src/render-systems/deferred/: deferred.cpp
examples/example-01/src/render-systems/empty/: empty.cpp
examples/example-01/src/render-systems/post-processing/: post_processing.cpp
examples/example-01/src/renderers/deferred/: deferred.cpp
examples/game/: CMakeLists.txt
examples/game/src/: main.cpp
examples/level-editor/: CMakeLists.txt
examples/level-editor/src/: main.cpp
examples/project-example/: CMakeLists.txt
examples/project-example/src/: main.cpp
examples/project-example/tools/: shader-compile-glsl.bat
examples/resource-manager/: CMakeLists.txt
examples/resource-manager/resources/shaders/mesh/: vs_mesh.sc
examples/resource-manager/src/: main.cpp
examples/resource-manager/tools/: shader-compile-glsl.bat
mara/include/mara/: defines.h  mara.h
mara/src/: config.h  mara.cpp  mara_p.h
mink/: todo.txt
samples/00-empty/: sample.cmake
samples/00-empty/src/: main.cpp
samples/01-basic/: sample.cmake
samples/01-basic/src/: main.cpp
source/: Makefile  compile-shaders.bat  main.cpp
source/include/: application_layer.hpp  imgui_impl_mapp.hpp  imgui_impl_win32.h  mengine.hpp
source/include/implementation/: imgui_impl_mrender.hpp
source/include/layers/: application_layer.hpp  rendering_layer.hpp
source/include/mengine/: defines.h  mengine.h
source/include/utils/: camera_orbit_controller.hpp  loader.hpp
source/src/: application_layer.cpp  config.h  imgui_impl_win32.cpp  mengine.cpp  mengine_p.h
source/src/imgui-bgfx/: imgui_impl_bgfx.cpp
source/src/implementation/: imgui_impl_mrender.cpp
source/src/layers/: application_layer.cpp  rendering_layer.cpp
source/src/utils/: camera_orbit_controller.cpp  loader.cpp
